--- a/styles/style.css
+++ b/styles/style.css
@@ -63,7 +63,6 @@ body{
     text-align: right;
  }
 
- 
 .hoveer{
     overflow: hidden;
 }
@@ -71,27 +70,6 @@ body{
     z-index: 1;
     opacity: 1 !important;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .lng:hover{
     color: #000;
     transition: 700ms;
@@ -142,36 +120,46 @@ body{
     margin: 5px 0;
     transition: 0.5s ease;
 }
-/* slider */
-    .slider-back-img-left{
+ 
+/* section */
+.behind-doctor{
     position: absolute;
-    width: 196px;
-    bottom: 47px;
-    left: -59px;
-    }
-
-.slider-back-img-left img{
-    width: 100%;
+    top: -33px;
+    left: 53px;
+    background-color: green;
+    width: 491px;
+    height: 493px;
+    z-index: -1;
 }
-
-.slider-back-text-left{  
-    width: 450px;
+.img-goshi{
     position: absolute;
-    bottom: 145px;
-    left: -163px;
+    width: 565px;
+    top: 25px;
+    right: 5px;
+    z-index: -1;
 }
-.slider-back-text-left p{
-    font-size: 28px;
+.title-1{
+    font-weight: bold;
+    margin-bottom: 35px;
 }
-.carousel-control-next {
-    right: 3%;
-    width: 45px;
-    opacity: 1;
+.title-2{
+    font-weight: bold;
+    font-size: 21px;
+    margin-bottom: 25px;
+    color: #666666;
 }
-.carousel-control-prev {
-    left: 3%;
-    width: 45px;
-    opacity: 1;
+.caption{
+    text-align: justify;
+    font-size: 18px;
+    color:#999999;
+}
+.dat{
+    width: 11px;
+    height: 11px;
+    background-color: green;
+    display: inline-block;
+    border-radius: 50%;
+    margin-right: 10px;
 }
 @media (min-width: 1400px){
     .header{
@@ -238,6 +226,47 @@ body{
         width: 303px;
         bottom: 104px;
         right: -97px;
+    }
+    /* section */
+    .behind-doctor{
+        position: absolute;
+        top: -33px;
+        left: 53px;
+        background-color: green;
+        width: 491px;
+        height: 493px;
+        z-index: -1;
+    }
+    .img-goshi{
+        position: absolute;
+        width: 565px;
+        top: 25px;
+        right: 5px;
+        z-index: -1;
+    }
+    .title-1{
+        font-weight: bold;
+        margin-bottom: 35px;
+    }
+    .title-2{
+        font-weight: bold;
+        white-space: nowrap;
+        font-size: 21px;
+        margin-bottom: 25px;
+        color: #666666;
+    }
+    .caption{
+        text-align: justify;
+        font-size: 18px;
+        color:#999999;
+    }
+    .dat{
+        width: 11px;
+        height: 11px;
+        background-color: green;
+        display: inline-block;
+        border-radius: 50%;
+        margin-right: 10px;
     }
 }
 @media (max-width: 1400px){
@@ -312,6 +341,47 @@ body{
         width: 303px;
         bottom: 104px;
         right: -97px;
+    }
+    /* section */
+    .behind-doctor{
+        position: absolute;
+        top: -33px;
+        left: 6px;
+        background-color: green;
+        width: 491px;
+        height: 493px;
+        z-index: -1;
+    }
+    .img-goshi{
+        position: absolute;
+        width: 565px;
+        top: 25px;
+        right: 5px;
+        z-index: -1;
+    }
+    .title-1{
+        font-weight: bold;
+        margin-bottom: 15px;
+        margin-top: 50px;
+    }
+    .title-2{
+        font-weight: bold;
+        font-size: 21px;
+        margin-bottom: 13px;
+        color: #666666;
+    }
+    .caption{
+        text-align: justify;
+        font-size: 18px;
+        color:#999999;
+    }
+    .dat{
+        width: 11px;
+        height: 11px;
+        background-color: green;
+        display: inline-block;
+        border-radius: 50%;
+        margin-right: 10px;
     }
     
 }
@@ -412,6 +482,14 @@ body{
         width: 230px;
         bottom: 40px;
         right: -90px;
+    }
+    /* section */
+    .img-goshi {
+        position: absolute;
+        width: 418px;
+        top: 158px;
+        right: 5px;
+        z-index: -1;
     }
     
 }
