--- a/styles/style.css
+++ b/styles/style.css
@@ -185,11 +185,13 @@ body{
     line-height: 1.9em;
 }
 /* poster */
-.poster-img{
+.poster-img {
     margin-top: 75px;
-    background-image: url(../image/poster.jpg); 
+    background-image: url(../image/poster.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
 }
 .poster-img .card{
     background-color: rgba(0, 153, 117, 0.74);
@@ -268,6 +270,47 @@ body{
 .owl-img{
     width: 155px !important ;
     margin: auto;
+}
+/* amal doctor */
+.amal-doctor{
+    box-shadow: 280px 280px 0px -245px rgb(204, 204, 204) , -280px -280px 0px -245px rgb(204, 204, 204);
+    margin-top: 60px;
+}
+.amal-icon{
+    position: absolute;
+    bottom: -5%;
+    left: 5%;
+    display: inline-block;
+    width: 130px;
+    height: 130px;
+    background: rgb(0, 153, 117);
+    border-radius: 50%;
+}
+/* result */
+.result-title{
+    margin: 90px 0 30px 0;
+    font-weight: bold;
+    font-size: 35px;
+}
+.result-capshen{
+    color:#999999;
+    text-align: justify;
+    margin-bottom: 40px;
+}
+.tik-text{
+    color:#999999;
+    font-size: 15px;
+}
+/* faq */
+.faq a::before{
+    content: "-";
+    position: absolute;
+    left: 15px;
+}
+.faq .collapsed::before{
+    content: "+";
+    position: absolute;
+    left: 15px;
 }
 @media (min-width: 1400px){
     .header{
@@ -638,6 +681,10 @@ body{
         margin-top: 70px;
         box-shadow: -28px -28px 0px -5px rgb(204, 204, 204);
     }
+    /* amal doctor */
+    .amal-doctor {
+        box-shadow: 195px 195px 0px -170px rgb(204 204 204), -195px -195px 0px -170px rgb(204 204 204);
+    }
 }
 @media (max-width: 991px){
     .header{
@@ -754,6 +801,23 @@ body{
     /* science */
     .img-doctor-science{
         width: 440px;
+    }
+      /* amal doctor */
+      .amal-doctor {
+        box-shadow: 150px 150px 0px -135px rgb(204 204 204), -150px -150px 0px -135px rgb(204 204 204);
+    }
+    .amal-icon {
+        position: absolute;
+        bottom: -5%;
+        left: 5%;
+        display: inline-block;
+        width: 100px;
+        height: 100px;
+        background: rgb(0, 153, 117);
+        border-radius: 50%;
+    }
+    .amal-icon img{
+        width: 60px;
     }
 }
 @media (max-width: 768px){
@@ -881,7 +945,29 @@ body{
         width: 440px;
         margin-top: 70px;
     }
-   
+      /* amal doctor */
+      .amal-doctor {
+        box-shadow: 110px 110px 0px -95px rgb(204 204 204), -110px -110px 0px -95px rgb(204 204 204);
+    }
+    .amal-icon {
+        position: absolute;
+        bottom: -5%;
+        left: 5%;
+        display: inline-block;
+        width: 80px;
+        height: 80px;
+        background: rgb(0, 153, 117);
+        border-radius: 50%;
+    }
+    .amal-icon img{
+        width: 50px;
+    }
+   /* result */
+   .result-title {
+    margin: 90px 0 30px 0;
+    font-weight: bold;
+    font-size: 24px;
+}
 }
 @media (max-width: 576px){
     .header{
@@ -1018,5 +1104,29 @@ body{
 .science-caption {
     color: #999999;
     font-size: 9px;
+}
+ /* amal doctor */
+ .amal-doctor {
+    box-shadow: 70px 70px 0px -60px rgb(204 204 204), -70px -70px 0px -60px rgb(204 204 204);
+}
+.amal-icon {
+    position: absolute;
+    bottom: -5%;
+    left: 5%;
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    background: rgb(0, 153, 117);
+    border-radius: 50%;
+}
+.amal-icon img{
+    width: 28px;
+    margin-top: 12px;
+}
+/* result */
+.result-title {
+    margin: 90px 0 30px 0;
+    font-weight: bold;
+    font-size: 17px;
 }
 }
